Closed Bug 199649 Opened 22 years ago Closed 22 years ago

Yahoo! Mail Remains Broken After Bug 198870 Fixed

Categories

(Core :: Networking: Cookies, defect)

x86
Windows XP
defect
Not set
blocker

Tracking

()

RESOLVED FIXED

People

(Reporter: mozilla, Assigned: dwitte)

References

Details

Attachments

(2 files)

2003032804 trunk As requested in bug 198870, here are the cookie prefs from my prefs.js: --- user_pref("network.cookie.cookieBehavior", 1); user_pref("network.cookie.lifetime.enabled", true); ---
-> dwitte
Assignee: darin → dwitte
This seems to be the interresing part: 0[274280]: ===== COOKIE NOT ACCEPTED ===== 0[274280]: request URL: http://us.f101.mail.yahoo.com/ym/ShowLetter?box=Inbox&MsgId=2430_1221327_9806_1183_1491_0_9412_2788_380228662&num=&Search=&YY=68489&order=down&sort=date 0[274280]: cookie string: YAB.Iemail=%2e; expires=Thu, 01 Jan 1970 22:00:00 GMT; path=/; domain=mail.yahoo.com YM.Gen=i=vaJ46Ur8iCyXC6SyhqziJRjpKxKgFiN6hllXsF1Ac8etmVAG_LciIPx19_c_0jQFKIR283p_FR4uMXiVezsp.cfHxy8GeBoZ8nRh_mPaScz7oFSFBCKDkuVAa3ImyepVnGJSuRxJ..QTBJ838hdrfiOmbsSDsDtK73cfuHBNjz60G6Po8DzphfuVNn.Un_O1q6NNNx9cd7ysDB_6ygZjHbm_Z6IQbCh5ktwWILX2pPg097eSQeSIL8d7ZxfNYuuBmS82LjtQfMES_jzNBZVUYFx3I4O0_tofePyHWqAJLsrSh3bRTNUkrLHPSowXIYrFC7Opoo2IvUJBg.1G1htXfVrBJwdmtpuxQsOQY37J.qWJpblaZL2wK9a66.NAbLN7WfWRD 0[274280]: current time: Fri Mar 28 16:00:50 2003 GMT 0[274280]: rejected because cookie has already expired Did we change the expire code? What does the spec say? It looks to me that this cookie was supposed to be a session cookie.
that's an expired cookie - spec says it won't be set; and there isn't a mozilla version that will. our old cookie code had a roundabout way of doing this, so looking at pre-1.4 logs may be confusing, but effectively it's never set. I suspect the problem is elsewhere. Jerry, what version of mozilla are you comparing against (i.e. was there a version that worked for you)? 1.3? I recommend two things: a) can you tell us your javascript cookie preferences? Edit/Prefs/Advanced/Scripts & Plugins/Create or change cookies, and Read cookies. b) can you try switching off the "Enable cookies for the originating website only" pref (-> accept all cookies) and try? thanks!
This started happening sometime this week. I've been using Mozilla to read Yahoo! mail for over two years. This is the first problem I've had. My JS cookie pref is that cookies can be read/stored/changed by JS. Changing the cookie site prefs has no effect. Do this to reproduce it for your own research. 1. Open a message in your Yahoo! Mail inbox. 2. Click the "Forward" button. 3. Insert an address from your Yahoo! address book using "Insert Contact" link. 4. Send mail. 5. Click on return to message link, in fact try getting back to your inbox any way you can think of because it ain't gonna happen.
confirmed, 2003032808 trunk. thanks for the detailed steps; sorry i wasn't able to reproduce it before! -> confirming, me smells like a cookie deletion bug.
Status: NEW → ASSIGNED
yup, it's a cookie deletion bug. side-by-side comparison of a log from 1.3 and current trunk shows that yahoo sets a cookie in the message composition screen; when you finish there, it tries to expire it. there's a bug in the algo that searches for a previously set cookie, so current trunk doesn't find the previous cookie and ignores the already-expired cookie. this leaves the composition cookie sitting there, and breaks things horribly... one of the checks in cookie_FindPosition is in the wrong place; it should be outside an |if| block, not inside. fix is pretty trivial.
Attached patch fixSplinter Review
Attachment #118850 - Flags: superreview?(alecf)
Attachment #118850 - Flags: review?(darin)
setting blocking1.4a? : this is a serious regression, because it prevents cookies from being updated/overwritten/force-expired in a reliable manner - many sites will depend on this behavior.
Flags: blocking1.4a?
*** Bug 199240 has been marked as a duplicate of this bug. ***
Attachment #118850 - Flags: superreview?(darin)
Attachment #118850 - Flags: superreview?(alecf)
Attachment #118850 - Flags: review?(darin)
Attachment #118850 - Flags: review+
Comment on attachment 118850 [details] [diff] [review] fix sr=darin
Attachment #118850 - Flags: superreview?(darin) → superreview+
Comment on attachment 118850 [details] [diff] [review] fix Reqeusting approval for this regression fix that makes yahoo mail (and maybe other sites) work again.
Attachment #118850 - Flags: approval1.4a?
Comment on attachment 118850 [details] [diff] [review] fix a=asa (on behalf of drivers) for checkin to 1.4a. Time is short so please land this as soon as possible. Thanks.
Attachment #118850 - Flags: approval1.4a? → approval1.4a+
Checked in by timeless
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
thanks!
Flags: blocking1.4a?
*** Bug 201487 has been marked as a duplicate of this bug. ***
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: