Bug 199649 Yahoo! Mail Remains Broken After Bug 198870 Fixed patch by dwitte@stanford.edu r=mvl@exedo.nl sr=darin a=asa